Remove unnecessary spin in ToolTipController

The motivation for the change is to reduce idle wakeups and therefore
reduce idle power.

ToolTipController has a repeating 500ms timer that tries to update
itself periodically, while most of the time there is no change at all.

This CL removes this spin but keeps the same functionality by
1) upgrading OnMouseEvent() in TooltipController;
2) overriding OnWindowPropertyChanged() in TooltipController;
3) overriding OnCursorVisibilityChanged() in TooltipController.

After the change, tooltip is updated on demand via observer pattern,
rather than unnecessary periodic checking.

BUG=668198

Review-Url: https://codereview.chromium.org/2615993002
Cr-Commit-Position: refs/heads/master@{#443584}

Former-commit-id: 6b8312a4903fc6965a64a3835524f1a8f384f26b