ui/views/corewm/tooltip_controller_test_helper.cc
@@ -27,12 +27,8 @@ aura::Window* TooltipControllerTestHelper::GetTooltipWindow() {
   return controller_->tooltip_window_;
 }
 
-void TooltipControllerTestHelper::FireTooltipTimer() {
-  controller_->TooltipTimerFired();
-}
-
-bool TooltipControllerTestHelper::IsTooltipTimerRunning() {
-  return controller_->tooltip_timer_.IsRunning();
+void TooltipControllerTestHelper::UpdateIfRequired() {
+  controller_->UpdateIfRequired();
 }
 
 void TooltipControllerTestHelper::FireTooltipShownTimer() {
