ash/tooltips/tooltip_controller_unittest.cc
@@ -109,20 +109,21 @@ TEST_F(TooltipControllerTest, HideTooltipWhenCursorHidden) {
                                 view->bounds().CenterPoint());
   base::string16 expected_tooltip = base::ASCIIToUTF16("Tooltip Text");
 
-  // Fire tooltip timer so tooltip becomes visible.
-  helper_->FireTooltipTimer();
+  // Mouse event triggers tooltip update so it becomes visible.
   EXPECT_TRUE(helper_->IsTooltipVisible());
 
-  // Hide the cursor and check again.
+  // Disable mouse event which hides the cursor and check again.
   ash::Shell::GetInstance()->cursor_manager()->DisableMouseEvents();
-  helper_->FireTooltipTimer();
+  RunAllPendingInMessageLoop();
+  EXPECT_FALSE(ash::Shell::GetInstance()->cursor_manager()->IsCursorVisible());
+  helper_->UpdateIfRequired();
   EXPECT_FALSE(helper_->IsTooltipVisible());
 
-  // Show the cursor and re-check.
-  RunAllPendingInMessageLoop();
+  // Enable mouse event which shows the cursor and re-check.
   ash::Shell::GetInstance()->cursor_manager()->EnableMouseEvents();
   RunAllPendingInMessageLoop();
-  helper_->FireTooltipTimer();
+  EXPECT_TRUE(ash::Shell::GetInstance()->cursor_manager()->IsCursorVisible());
+  helper_->UpdateIfRequired();
   EXPECT_TRUE(helper_->IsTooltipVisible());
 }
 
@@ -150,7 +151,6 @@ TEST_F(TooltipControllerTest, TooltipsOnMultiDisplayShouldNotCrash) {
   ui::test::EventGenerator generator(root_windows[1]);
   generator.MoveMouseRelativeTo(widget2->GetNativeView(),
                                 view2->bounds().CenterPoint());
-  helper_->FireTooltipTimer();
   EXPECT_TRUE(helper_->IsTooltipVisible());
 
   // Get rid of secondary display. This destroy's the tooltip's aura window. If
@@ -164,7 +164,6 @@ TEST_F(TooltipControllerTest, TooltipsOnMultiDisplayShouldNotCrash) {
   ui::test::EventGenerator generator1(root_windows[0]);
   generator1.MoveMouseRelativeTo(widget1->GetNativeView(),
                                  view1->bounds().CenterPoint());
-  helper_->FireTooltipTimer();
   EXPECT_TRUE(helper_->IsTooltipVisible());
 }
 
